@@ -186,8 +186,15 @@ public class PropagatedContingency {
             switch (connectable.getType()) {
                 case LINE:
                 case TWO_WINDINGS_TRANSFORMER:
-                case DANGLING_LINE:
                     branchIdsToOpen.add(connectable.getId());
+                    break;
+                case DANGLING_LINE:
+                    DanglingLine dl = (DanglingLine) connectable;
+                    if (dl.isPaired()) {
+                        branchIdsToOpen.add(dl.getTieLine().orElseThrow().getId());
+                    } else {
+                        branchIdsToOpen.add(dl.getId());
+                    }
                     break;
 
                 case GENERATOR:
@@ -261,7 +268,11 @@ public class PropagatedContingency {
         }
         if (identifiable instanceof HvdcLine) {
             HvdcLine hvdcLine = (HvdcLine) identifiable;
-            return Arrays.asList(hvdcLine.getConverterStation1().getTerminal(), hvdcLine.getConverterStation2().getTerminal());
+            return List.of(hvdcLine.getConverterStation1().getTerminal(), hvdcLine.getConverterStation2().getTerminal());
+        }
+        if (identifiable instanceof TieLine) {
+            TieLine line = (TieLine) identifiable;
+            return List.of(line.getDanglingLine1().getTerminal(), line.getDanglingLine2().getTerminal());
         }
         if (identifiable instanceof Switch) {
             return Collections.emptyList();
@@ -314,6 +325,10 @@ public class PropagatedContingency {
             case BUSBAR_SECTION:
                 identifiable = network.getBusbarSection(element.getId());
                 identifiableType = "Busbar section";
+                break;
+            case TIE_LINE:
+                identifiable = network.getTieLine(element.getId());
+                identifiableType = "Tie line";
                 break;
             case BUS:
                 identifiable = network.getBusBreakerView().getBus(element.getId());
